<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff3f3f3"
    android:orientation="vertical" >
    
         <TextView
         android:id="@+id/archivo_nombre_maestro"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="40dip"
         android:background="@drawable/style_search"
         android:hint="@string/nombre_profesor"
         android:singleLine="false"
         android:textSize="13sp"
         android:textStyle="bold"
         android:textColor="#adadad" />
    
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:background="#e3e3e3"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="15dp">

            <ImageView
                android:id="@+id/imagenArchivo"
                android:layout_width="85dp"
                android:layout_height="120dp"
                
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/splash"
                android:src="@drawable/document" />

            <Button
                android:id="@+id/archivo_bt_galeria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imagenArchivo"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="22dp"
                android:layout_toRightOf="@+id/imagenArchivo"
                android:background="@drawable/blue_button_rad"
                android:text="@string/foto1"
                android:textColor="#ffffff" />

             <Button
                 android:id="@+id/archivo_bt_foto"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/archivo_bt_galeria"
                 android:layout_below="@+id/archivo_bt_galeria"
                 android:layout_marginTop="14dp"
                 android:background="@drawable/blue_button_rad"
                 android:text="@string/foto2"
                 android:textColor="#ffffff" />

    </RelativeLayout>
    

         
         <TextView
         android:id="@+id/archivo_coment1"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="20dip"
         android:background="@drawable/style_text"
         android:hint="@string/materia"
         android:singleLine="false"
         android:layout_marginTop="3dp"
         android:textSize="13sp"
         android:textColor="#000000" />
         
         <EditText
             android:id="@+id/archivo_materia"
             android:layout_width="match_parent"
             android:layout_height="26dip"
             android:background="@drawable/style_multiline"
             android:ems="12"
             android:maxLength="45"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:gravity="top"
             android:textSize="13sp"
             android:padding="3sp"
             android:inputType="text" >
         </EditText>
                  
         <TextView
         android:id="@+id/archivo_coment2"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="20dip"
         android:background="@drawable/style_text"
         android:hint="@string/nombre"
         android:singleLine="false"
         android:layout_marginTop="3dp"
         android:textSize="13sp"
         android:textColor="#000000" />

         <EditText
             android:id="@+id/archivo_nombre"
             android:layout_width="match_parent"
             android:layout_height="26dip"
             android:background="@drawable/style_multiline"
             android:ems="12"
             android:maxLength="45"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:gravity="top"
             android:textSize="13sp"
             android:padding="3sp"
             android:inputType="text" >
         </EditText>
         
        
         
         

         <Button
             android:id="@+id/archivo_bt_listo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/orange_button_rad"
             android:layout_marginTop="30dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
			 android:textColor="#ffffff"
             android:text="@string/listo" />

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="fill_parent" >

             <TextView
                 android:id="@+id/textViewaviso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:text="@string/aviso_archivo"
                 android:gravity="center"
                 android:layout_marginBottom="3dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:textColor="#aaaaaa"
             	 android:textSize="12sp" />
             
         </RelativeLayout>

</LinearLayout>